@@ -12,6 +12,9 @@ RELEASE  VERSION/DATE TO BE FILLED IN LATER
 
   From Dirk Baechle:
     - Added Docker images for building and testing SCons. (issue #3585)
+    - Integrated stubprocess.py wrapper from the Parts project in order
+      to speed up large builds. It's available as an experimental option
+      '--stubprocess-wrapper' for now.
 
   From James Benton:
     - Improve Visual Studio solution/project generation code to add support
